--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <h1>ポートフォリオ</h1>
       <section>
-        <h2>突き詰める最高のスキルを</h2>
+        <h2>testtesttesttest</h2>
       </section>
       <section>
         <h2>my project</h2>
